# mp3-player

./: CMakeLists.txt  Dockerfile.native-arm64  README.md  config.ini  mdns.hpp  mp3_player.cpp
.github/workflows/: build.yml
debian/: changelog  conffiles  control  copyright  mp3-player.service  postinst  postrm  preinst  prerm  rules
